--- a/src/assets/scss/carbon-override.scss
+++ b/src/assets/scss/carbon-override.scss
@@ -9,7 +9,8 @@
 }
 
 .bx--content{
-	background-color: $ui-01;
+	background-color: $ui-background;
+	padding:0;
 }
 
 .bx--tile {
